--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   lottie: ^1.3.0
   google_fonts: ^2.3.1
   gap: ^2.0.1
+  bottom_picker: ^2.0.1
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
