--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   firebase_core: ^2.7.1
   get: ^4.6.5
   cloud_firestore: ^4.4.4
+  provider: ^6.0.5
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
