--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   cloud_firestore: ^4.4.4
   provider: ^6.0.5
   uuid: ^3.0.7
+  google_sign_in: ^6.0.2
 
 dev_dependencies:
   flutter_test:
