--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   provider: ^6.0.5
   uuid: ^3.0.7
   google_sign_in: ^6.0.2
+  get_storage: ^2.1.1
 
 dev_dependencies:
   flutter_test:
